<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Fragment1">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/text_view1"

        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.5">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:text="18sp"
            app:layout_constraintBottom_toTopOf="@+id/radioButton2"
            app:layout_constraintStart_toStartOf="@+id/radioGroup1"
            app:layout_constraintTop_toTopOf="@+id/radioGroup1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:text="24sp"
            app:layout_constraintBottom_toTopOf="@+id/radioButton3"
            app:layout_constraintStart_toStartOf="@+id/radioButton1"
            app:layout_constraintTop_toBottomOf="@+id/radioButton1" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:text="36sp"
            app:layout_constraintStart_toStartOf="@+id/radioButton2"
            app:layout_constraintTop_toBottomOf="@+id/radioButton2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/text_view2"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/userText"
        app:layout_constraintStart_toStartOf="@+id/radioGroup1"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1"
        app:layout_constraintVertical_bias="0.5" />


    <EditText
        android:id="@+id/userText"
        android:layout_width="340dp"
        android:layout_height="72dp"
        android:layout_marginTop="12dp"
        android:autofillHints="my text xoxoxo"
        android:ems="10"

        android:hint="@string/text_ent"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/buttonOK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.5" />
    <!--android:text="@string/text_ent"-->


    <Button
        android:id="@+id/buttonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/button_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/userText"
        app:layout_constraintTop_toBottomOf="@+id/userText"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>