<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10sp"
        android:text="Choose font size:"

        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />


    <EditText
        android:id="@+id/editTextText"
        android:layout_width="340dp"
        android:layout_height="72dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/text_ent"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.5" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"

        android:text="Enter text:"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.5" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/button_ok"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="342dp"
        android:layout_height="250dp"
        android:text="@string/text_ent"
        android:layout_marginBottom="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />


    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="125dp"
        android:layout_height="150dp"
        android:layout_marginTop="10sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:text="18sp"
            app:layout_constraintBottom_toTopOf="@+id/radioButton6"
            app:layout_constraintStart_toStartOf="@+id/radioGroup2"
            app:layout_constraintTop_toTopOf="@+id/radioGroup2" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:text="24sp"
            app:layout_constraintBottom_toTopOf="@+id/radioButton7"
            app:layout_constraintStart_toStartOf="@+id/radioButton4"
            app:layout_constraintTop_toBottomOf="@+id/radioButton4" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:text="36sp"
            app:layout_constraintStart_toStartOf="@+id/radioButton6"
            app:layout_constraintTop_toBottomOf="@+id/radioButton6" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>